--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Something</title>
     <script src="bundle.js"></script>
+    <link rel="stylesheet" href="react-select.css">
 </head>
 <body>
 <div id="root"></div>
