--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Something</title>
+    <title>Menpobench</title>
     <script src="bundle.js"></script>
     <link rel="stylesheet" href="react-select.css">
 </head>
